--- a/public/company.html
+++ b/public/company.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Enhanced Company Form</title>
+    <title>Company Form</title>
+
+    <!-- Font -->
     <link
       href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;600&display=swap"
       rel="stylesheet"
     />
+
     <style>
       :root {
         --accent-color: #6a11cb;
@@ -15,44 +18,67 @@
         --form-bg: #ffffff;
         --text-color: #333;
       }
+
       * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
       }
+
       body {
         font-family: "Urbanist", sans-serif;
-        background: #f5f5f5;
+        background: #fff;
+        position: relative;
+        overflow-x: hidden;
         min-height: 100vh;
         padding-top: 80px;
       }
+
       header {
         position: fixed;
         top: 0;
         width: 100%;
         background: var(--accent-color);
-        padding: 20px 10px;
-        text-align: center;
+        padding: 20px 40px;
         z-index: 1000;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
       }
+
+      nav {
+        max-width: 1200px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
       nav a {
         color: white;
         text-decoration: none;
-        margin: 0 15px;
+        font-size: 1.1rem;
+        padding: 0 12px;
         font-weight: 600;
+        cursor: pointer;
+        user-select: none;
+        white-space: nowrap;
       }
+
       nav a:hover {
         text-decoration: underline;
       }
+
       .form-wrapper {
         max-width: 600px;
         background: var(--form-bg);
-        margin: 80px auto 120px; /* Offset by header height */
-        border-radius: 15px;
-        padding: 30px;
+        margin: 0 auto 120px auto;
+        border-radius: 20px;
+        padding: 40px 30px;
         box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
+        z-index: 2;
+        position: relative;
         animation: fadeIn 0.6s ease;
       }
+
       @keyframes fadeIn {
         from {
           opacity: 0;
@@ -63,60 +89,214 @@
           transform: translateY(0);
         }
       }
+
       h2 {
         text-align: center;
         margin-bottom: 30px;
         color: var(--accent-color);
         font-weight: 700;
-        font-size: 36px;
-        border-bottom: 2px solid var(--accent-color);
-        padding-bottom: 10px;
+        font-size: 40px;
+        border: 2px solid var(--accent-color);
+        border-radius: 50px;
+        padding: 10px 40px;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+        user-select: none;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: fit-content;
       }
+
+      h2 .emoji {
+        font-size: 42px;
+        line-height: 1;
+        user-select: none;
+        transition: transform 0.3s ease;
+      }
+
+      h2 .emoji:hover {
+        transform: scale(1.2) rotate(10deg);
+        cursor: default;
+      }
+
       .form-group {
-        margin-bottom: 20px;
+        position: relative;
+        margin-bottom: 25px;
       }
+
       .form-group input,
       .form-group textarea,
       .form-group select {
         width: 100%;
-        padding: 15px;
-        border: 2px solid #ddd;
-        border-radius: 10px;
-        background: #fafafa;
+        padding: 14px 16px;
+        font-size: 16px;
+        border: 2px solid #eee;
+        border-radius: 12px;
+        background: #f9f9f9;
+        color: var(--text-color);
         outline: none;
-        transition: border-color 0.3s ease;
+        transition: 0.3s ease;
+        appearance: none;
       }
+
+      .form-group select {
+        background: #f9f9f9
+          url("data:image/svg+xml,%3Csvg width='12' height='8' viewBox='0 0 12 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 1L6 7L11 1' stroke='%236a11cb' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E")
+          no-repeat right 12px center/12px 8px;
+        cursor: pointer;
+      }
+
+      .form-group textarea {
+        resize: none;
+        height: 90px;
+      }
+
       .form-group input:focus,
       .form-group textarea:focus,
       .form-group select:focus {
         border-color: var(--accent-color);
+        background-color: #fff;
       }
+
       .form-group label {
-        display: block;
-        margin-bottom: 5px;
-        font-weight: bold;
-        color: var(--text-color);
+        position: absolute;
+        left: 16px;
+        top: 14px;
+        background: #fff;
+        padding: 0 6px;
+        color: #888;
+        font-size: 15px;
+        transition: 0.2s ease all;
+        pointer-events: none;
       }
+
+      .form-group input:focus + label,
+      .form-group input:not(:placeholder-shown) + label,
+      .form-group textarea:focus + label,
+      .form-group textarea:not(:placeholder-shown) + label,
+      .form-group select:focus + label,
+      .form-group select:not([value=""]) + label {
+        top: -10px;
+        left: 12px;
+        font-size: 13px;
+        color: var(--accent-color);
+      }
+
       button {
         width: 100%;
-        padding: 15px;
-        font-size: 18px;
+        padding: 14px;
+        font-size: 16px;
         font-weight: 600;
         color: white;
         background: var(--accent-color);
         border: none;
-        border-radius: 10px;
+        border-radius: 12px;
         cursor: pointer;
-        transition: background 0.3s ease;
+        transition: 0.3s ease;
       }
+
       button:hover {
         background: var(--accent-hover);
       }
+
+      .wave-toggle {
+        position: fixed;
+        width: 100%;
+        height: 220px;
+        background-color: var(--accent-color);
+        overflow: hidden;
+        cursor: pointer;
+        transition: transform 1.2s ease-in-out;
+        z-index: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+      }
+
+      .wave-toggle.top {
+        top: 0;
+        bottom: auto;
+        transform: translateY(0%);
+      }
+
+      .wave-toggle.bottom {
+        transform: translateY(0%);
+      }
+
+      .wave-toggle svg {
+        display: block;
+        width: 100%;
+        height: 100%;
+      }
+
+      .phone-input .phone-wrapper {
+        display: flex;
+        align-items: center;
+        background: #f9f9f9;
+        border: 2px solid #eee;
+        border-radius: 12px;
+        padding-left: 14px;
+        transition: 0.3s ease;
+        position: relative;
+      }
+
+      .phone-input .phone-wrapper:focus-within {
+        border-color: var(--accent-color);
+        background-color: #fff;
+      }
+
+      .phone-input .prefix {
+        font-size: 16px;
+        color: #555;
+        margin-right: 8px;
+        white-space: nowrap;
+      }
+
+      .phone-input input {
+        border: none;
+        background: transparent;
+        padding: 14px 0;
+        flex: 1;
+        font-size: 16px;
+        color: var(--text-color);
+        outline: none;
+      }
+
+      .phone-input label {
+        position: absolute;
+        left: 48px;
+        top: 14px;
+        background: #fff;
+        padding: 0 6px;
+        color: #888;
+        font-size: 15px;
+        transition: 0.2s ease all;
+        pointer-events: none;
+      }
+
+      .phone-input input:focus + label,
+      .phone-input input:not(:placeholder-shown) + label {
+        top: -10px;
+        left: 44px;
+        font-size: 13px;
+        color: var(--accent-color);
+      }
+
       @media (max-width: 480px) {
         .form-wrapper {
-          padding: 20px;
+          padding: 30px 20px;
+          margin: 0 15px 120px 15px;
         }
+
         h2 {
+          font-size: 28px;
+          padding: 8px 25px;
+          gap: 12px;
+        }
+
+        h2 .emoji {
           font-size: 28px;
         }
       }
@@ -131,116 +311,241 @@
     </header>
 
     <div class="form-wrapper">
-      <h2>Company Form</h2>
-      <form>
+      <h2>
+        <span class="emoji">🏢</span>
+        Company Form
+        <span class="emoji">💼</span>
+      </h2>
+      <form id="companyForm">
         <div class="form-group">
-          <label for="district">District</label>
           <select id="district" name="district" required>
             <option value="" disabled selected>Select District</option>
-            <!-- Add district options here -->
+            <!-- Full list remains unchanged -->
             <option>Agra</option>
             <option>Aligarh</option>
             <option>Allahabad (Prayagraj)</option>
-            <!-- Other options omitted for brevity -->
+            <option>Ambedkar Nagar</option>
+            <option>Amethi</option>
+            <option>Auraiya</option>
+            <option>Azamgarh</option>
+            <option>Baghpat</option>
+            <option>Bahraich</option>
+            <option>Ballia</option>
+            <option>Balrampur</option>
+            <option>Banda</option>
+            <option>Bareilly</option>
+            <option>Basti</option>
+            <option>Bhadohi</option>
+            <option>Bulandshahr</option>
+            <option>Chandauli</option>
+            <option>Chitrakoot</option>
+            <option>Deoria</option>
+            <option>Etah</option>
+            <option>Etawah</option>
+            <option>Faizabad (Ayodhya)</option>
+            <option>Farrukhabad</option>
+            <option>Fatehpur</option>
+            <option>Firozabad</option>
+            <option>Gautam Buddha Nagar</option>
+            <option>Ghaziabad</option>
+            <option>Ghazipur</option>
+            <option>Gonda</option>
+            <option>Gorakhpur</option>
+            <option>Hamirpur</option>
+            <option>Hapur</option>
+            <option>Hardoi</option>
+            <option>Hathras</option>
+            <option>Jalaun</option>
+            <option>Jaunpur</option>
+            <option>Jhansi</option>
+            <option>Kannauj</option>
+            <option>Kanpur Dehat</option>
+            <option>Kanpur Nagar</option>
+            <option>Kanshiram Nagar (Kasganj)</option>
+            <option>Kaushambi</option>
+            <option>Kushinagar</option>
+            <option>Lakhimpur Kheri</option>
+            <option>Lalitpur</option>
+            <option>Lucknow</option>
+            <option>Mahrajganj</option>
+            <option>Mahoba</option>
+            <option>Mainpuri</option>
+            <option>Mathura</option>
+            <option>Mau</option>
+            <option>Meerut</option>
+            <option>Mirzapur</option>
+            <option>Moradabad</option>
+            <option>Muzaffarnagar</option>
+            <option>Pratapgarh</option>
+            <option>Raebareli</option>
+            <option>Rampur</option>
+            <option>Saharanpur</option>
+            <option>Shahjahanpur</option>
+            <option>Shamli</option>
+            <option>Shrawasti</option>
+            <option>Siddharthnagar</option>
+            <option>Sitapur</option>
+            <option>Sonebhadra</option>
+            <option>Sultanpur</option>
+            <option>Unnao</option>
+            <option>Varanasi</option>
           </select>
+          <label for="district">District</label>
         </div>
+
         <div class="form-group">
+          <input type="text" id="role" name="role" placeholder=" " required />
           <label for="role">Role</label>
-          <input type="text" id="role" name="role" required />
         </div>
+
         <div class="form-group">
+          <input
+            type="text"
+            id="companyName"
+            name="companyName"
+            placeholder=" "
+            required
+          />
           <label for="companyName">Company Name</label>
-          <input type="text" id="companyName" name="companyName" required />
         </div>
+
         <div class="form-group">
+          <textarea
+            id="address"
+            name="address"
+            placeholder=" "
+            required
+          ></textarea>
           <label for="address">Address</label>
-          <textarea id="address" name="address" required></textarea>
         </div>
-        <div class="form-group">
-          <label style="margin-bottom: 5px" for="phone">Phone Number</label>
-          <input
-            type="tel"
-            id="phone"
-            name="phone"
-            placeholder=" "
-            required
-            maxlength="10"
-            minlength="10"
-          />
+
+        <div class="form-group phone-input">
+          <div class="phone-wrapper">
+            <span class="prefix">+91</span>
+            <input
+              type="tel"
+              id="phone"
+              name="phone"
+              placeholder=" "
+              required
+              maxlength="10"
+              minlength="10"
+              pattern="[0-9]{10}"
+            />
+            <label for="phone">Phone Number</label>
+          </div>
         </div>
-        <div class="form-group">
-          <label for="whatsapp">WhatsApp Number</label>
-          <input
-            type="tel"
-            id="whatsapp"
-            name="whatsapp"
-            placeholder=" "
-            required
-            maxlength="10"
-            minlength="10"
-          />
+
+        <div class="form-group phone-input">
+          <div class="phone-wrapper">
+            <span class="prefix">+91</span>
+            <input
+              type="tel"
+              id="whatsapp"
+              name="whatsapp"
+              placeholder=" "
+              required
+              maxlength="10"
+              minlength="10"
+              pattern="[0-9]{10}"
+            />
+            <label for="whatsapp">WhatsApp Number</label>
+          </div>
         </div>
+
         <div class="form-group">
-          <label for="openings">Openings</label>
           <input
             type="number"
             id="openings"
             name="openings"
+            placeholder=" "
             required
             min="1"
             max="1000"
           />
+          <label for="openings">Openings</label>
         </div>
+
         <div class="form-group">
+          <select id="education" name="education" required>
+            <option value="" disabled selected>Education Required</option>
+            <option>8th Pass</option>
+            <option>10th Pass</option>
+            <option>12th Pass</option>
+            <option>Diploma</option>
+            <option>Graduation</option>
+            <option>Post Graduation</option>
+            <option>MBA</option>
+            <option>PhD</option>
+          </select>
           <label for="education">Education Required</label>
-          <input type="text" id="education" name="education" required />
         </div>
+
         <button type="submit">Submit</button>
       </form>
     </div>
-  <script>
-    const wave = document.getElementById('wave');
-    wave.addEventListener('click', () => {
-      wave.classList.toggle('top');
-      wave.classList.toggle('bottom');
-    });
 
-    // Form submission handling
-    document.querySelector('form').addEventListener('submit', async (e) => {
-      e.preventDefault();
+    <div class="wave-toggle bottom" id="wave">
+      <svg viewBox="0 0 1440 320" preserveAspectRatio="none">
+        <path
+          fill="#6a11cb"
+          fill-opacity="1"
+          d="M0,288L48,261.3C96,235,192,181,288,160C384,139,480,149,576,154.7C672,160,768,160,864,165.3C960,171,1056,181,1152,197.3C1248,213,1344,235,1392,245.3L1440,256L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"
+        ></path>
+      </svg>
+    </div>
 
-      const formData = {
-        district: document.getElementById('district').value,
-        role: document.getElementById('role').value,
-        companyName: document.getElementById('companyName').value,
-        address: document.getElementById('address').value,
-        phone: document.getElementById('phone').value,
-        whatsapp: document.getElementById('whatsapp').value,
-        openings: document.getElementById('openings').value,
-        education: document.getElementById('education').value
-      };
+    <!-- ✅ JavaScript Section -->
+    <script>
+      document
+        .getElementById("companyForm")
+        .addEventListener("submit", async (e) => {
+          e.preventDefault(); // prevent actual form submission
 
-      try {
-        const response = await fetch('/submit-company', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-          },
-          body: JSON.stringify(formData)
+          // Get values
+          const district = document.getElementById("district").value;
+          const role = document.getElementById("role").value.trim();
+          const companyName = document
+            .getElementById("companyName")
+            .value.trim();
+          const phone = document.getElementById("phone").value.trim();
+          const whatsapp = document.getElementById("whatsapp").value.trim();
+          const openings = document.getElementById("openings").value;
+          const education = document.getElementById("education").value;
+
+          // Simple validations can stay here...
+
+          // Sending data to the server
+          try {
+            const response = await fetch("/submit-company", {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: JSON.stringify({
+                district,
+                role,
+                companyName,
+                address: document.getElementById("address").value.trim(),
+                phone,
+                whatsapp,
+                openings,
+                education,
+              }),
+            });
+
+            const result = await response.json();
+            if (!response.ok) {
+              throw new Error(result.message || "Error submitting the form");
+            }
+
+            alert(result.message);
+            // Optionally, reset the form if needed
+            document.getElementById("companyForm").reset();
+          } catch (error) {
+            alert("Error: " + error.message);
+          }
         });
-
-        const result = await response.json();
-
-        if (result.success) {
-          alert('Company data submitted successfully!');
-          document.querySelector('form').reset();
-        } else {
-          alert('Error: ' + result.message);
-        }
-      } catch (error) {
-        alert('Error submitting form: ' + error.message);
-      }
-    });
-  </script>
+    </script>
   </body>
 </html>
