--- a/public/about.html
+++ b/public/about.html
@@ -170,6 +170,12 @@
       - Mobile-responsive design<br />
       - Real-time data updates<br /><br />
 
+      <strong>🔮 Future Enhancements:</strong><br />
+      - Job alerts via Email or WhatsApp<br />
+      - Resume/CV builder tool<br />
+      - Salary range filters<br />
+      - Application tracking system<br />
+      - Company rating system
     </div>
   </main>
 
