--- a/public/about.html
+++ b/public/about.html
@@ -97,20 +97,11 @@
 
     @media (max-width: 600px) {
       header {
-        padding: 15px;
+        padding: 15px 0;
       }
 
       nav {
-        justify-content: space-between;
-        padding: 0 15px;
-      }
-
-      nav a:nth-child(1) {
-        margin-left: 0;
-      }
-
-      nav a:nth-child(2) {
-        margin-right: 0;
+        padding: 0 12px;
       }
 
       nav a {
