--- a/public/company-details.html
+++ b/public/company-details.html
@@ -195,19 +195,21 @@
 
       .modal-content {
         background-color: white;
-        margin: 10% auto;
+        margin: 15% auto;
         padding: 30px;
         border-radius: 12px;
         width: 90%;
-        max-width: 500px;
+        max-width: 400px;
         text-align: center;
-        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+        box-shadow: 0 8px 20px rgba(0,0,0,0.3);
       }
 
       .modal-content h2 {
         color: var(--accent-color);
         margin-bottom: 20px;
         font-size: 1.8rem;
+        border: none;
+        padding: 0;
       }
 
       .modal-content p {
@@ -220,31 +222,35 @@
         width: 100%;
         margin: 15px 0;
         box-sizing: border-box;
+        display: inline-block;
       }
 
-      #passwordInput {
+      .modal-content input {
         width: 100%;
-        padding: 12px 45px 12px 12px;
+        padding: 12px 50px 12px 12px;
         border: 2px solid #eee;
         border-radius: 8px;
         font-size: 16px;
         outline: none;
         box-sizing: border-box;
+        padding-right: 50px !important;
       }
 
-      #passwordInput:focus {
+      .modal-content input:focus {
         border-color: var(--accent-color);
       }
 
       .password-toggle {
         position: absolute;
-        right: 12px;
+        right: 15px;
         top: 50%;
         transform: translateY(-50%);
         cursor: pointer;
         font-size: 18px;
         color: #666;
         user-select: none;
+        z-index: 10;
+        pointer-events: auto;
       }
 
       .password-toggle:hover {
@@ -261,7 +267,6 @@
         font-weight: 600;
         font-size: 16px;
         width: 100%;
-        margin-top: 10px;
       }
 
       .modal-content button:hover {
@@ -392,7 +397,7 @@
           <label for="district">District</label>
         </div>
 
-        <button type="submit" id="searchBtn">Enter Password & Search</button>
+        <button type="submit" id="searchBtn"> Search</button>
       </form>
     </div>
 
@@ -400,9 +405,9 @@
     <div id="passwordModal" class="modal" style="display: none;">
       <div class="modal-content">
         <span class="close" onclick="closePasswordModal()">&times;</span>
-        <h2>Enter Password</h2>
+        <h2>🔒 Enter Password</h2>
         <div class="password-input-wrapper">
-          <input type="password" id="passwordInput" placeholder="Enter password">         <span class="password-toggle" onclick="togglePasswordVisibility()">👁️</span> </input>
+          <input type="password" id="passwordInput" placeholder="Enter password"/>         <span class="password-toggle" onclick="togglePasswordVisibility()">👁️</span> 
  
         </div>
         <button onclick="verifyPassword()">Submit</button>
